objects/MarketInfoBO__c.object
<CustomObject>
    <fields>
        <fullName>AccountManager__c</fullName>
        <formula>QuoteLine__r.SBQQ__Quote__r.SBQQ__Account__r.Owner.FirstName &amp; &quot; &quot; &amp; QuoteLine__r.SBQQ__Quote__r.SBQQ__Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>QuoteLine__r.SBQQ__Quote__r.AccountName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessGroupClassification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Group Classification</label>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Market Info BO</relationshipLabel>
        <relationshipName>Market_Info_BO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <formula>TEXT ( QuoteLine__r.SBQQ__Quote__r.SBQQ__Account__r.ImcdBusinessUnit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitorAverageSalesPrice__c</fullName>
        <label>Competitor Average Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CompetitorDistributorName__c</fullName>
        <formula>Competitor_Distributor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitorProducerName__c</fullName>
        <formula>Competitor_Producer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Producer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitorProduct__c</fullName>
        <label>Competitor Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitorQuanity__c</fullName>
        <label>Competitor Quanity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Distributor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value needs to be of Type Distributor</errorMessage>
            <filterItems>
                <field>Competitor__c.Type__c</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Market Info BO</relationshipLabel>
        <relationshipName>Market_Info_BO_Distributor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Producer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Competitor__c.Type__c</field>
                <operation>equals</operation>
                <value>Producer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Market Info BO (Competitor Producer)</relationshipLabel>
        <relationshipName>Market_Info_BO_Producer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>QuoteLine__r.SBQQ__Quote__r.SBQQ__Opportunity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialIsKnown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Is Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductDisplayName__c</fullName>
        <formula>QuoteLine__r.ProductDisplay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Market Info BO</relationshipLabel>
        <relationshipName>Market_Info_BO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <formula>QuoteLine__r.SBQQ__Quote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteLine__c</fullName>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Market Info BO</relationshipLabel>
        <relationshipName>Market_Info_BO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuoteName__c</fullName>
        <formula>QuoteLine__r.SBQQ__Quote__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasurement__c</fullName>
        <label>Unit of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UnitOfMeasurement</valueSetName>
        </valueSet>
    </fields>
    <label>Market Info BO</label>
    <nameField>
        <displayFormat>MB-{000000000}</displayFormat>
        <label>Market Info BO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Info BO</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OnlyAllowedAgainstPrimary</fullName>
        <active>true</active>
        <description>Validation rule to make sure the quote line item this is created from is related to a Primary quote.</description>
        <errorConditionFormula>AND( 
IsNew(), 
QuoteLine__r.SBQQ__Quote__r.SBQQ__Primary__c = FALSE, 
$Setup.Global_Bypass_Processes_Settings__c.Run_Assignments_Rules__c 
)</errorConditionFormula>
        <errorMessage>You are only allowed to create Market Info BO&apos;s from a Quote Line Item associated to a primary Quote.</errorMessage>
    </validationRules>
</CustomObject>